# SecretService

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.conf.in
src/RENAME_ME/src/public/RENAME_ME/: global.h
src/core/: CMakeLists.txt  secretcore.qrc
src/core/src/private/: keystorage.h
src/core/src/public/: QASecret.cpp  QASecret.h
src/core/src/public/QASecret/: global.h  global.h.in  keystorage.cpp  keystorage.h
src/db/: CMakeLists.txt  SecretDB.qrc  yourtimebot.cpp  yourtimebot.h
src/db/languages/: en.ts  ru.ts  sr.ts  sr_ME.ts  uk.ts
src/db/src/private/: image.cpp  image.h  record.cpp  record.h  secretdatabase.cpp  secretdatabase.h
src/db/src/public/: SecretDB.cpp  SecretDB.h
src/db/src/public/SecretDB/: global.h.in  idatabase.cpp  idatabase.h  irecord.cpp  irecord.h
src/db/src/sql/: SecretDB_1.sql
src/example/: CMakeLists.txt  main.cpp
src/example/android/: AndroidManifest.xml.in
src/example/deploy/: SecretService.json  SecretService.json.in
src/example/languages/: ru.ts
src/service/: CMakeLists.txt  main.cpp  secretservice.cpp  secretservice.h
src/service/deploy/: SecretService.json.in  snapcraft.yaml.in
src/service/languages/: en.ts  pl.ts  zh.ts
src/testcore/: CMakeLists.txt
src/testcore/testcore/: testutils.cpp  testutils.h
tests/: CMakeLists.txt  tstMain.cpp
tests/units/: dbtest.cpp  dbtest.h
